2004-11-15  Pontus Freyhult  <pont@soua.net>

	Implement alternate unread mode line:
	* option-edit.el (lyskom-customize-buffer-format): Added 
	kom-unread-mode-line-type.
	(lyskom-custom-variables): Dito.	

	* english-strings.el, swedish-strings.el: 
	(lyskom-custom-strings): Added kom-unread-mode-line-type-tag
	and kom-unread-mode-line-type-doc. Added simple-unread-mode-line
	and explicit-unread-mode-line.

	* lyskom-rest.el (lyskom-make-alternate-unread-mode-line): New 
	function.
	(lyskom-make-lyskom-unread-mode-line): Use 
	lyskom-make-alternate-unread-mode-line if applicable.

	* buffers.el (lyskom-update-unread-mode-line): New function.
	(lyskom-clean-all-buffer-lists): Call lyskom-update-unread-mode-line.
	(lyskom-remove-buffer-from-lists): Dito.
	(lyskom-remove-unread-buffer): Dito.
	(lyskom-add-unread-buffer): Dito.

	* vars.el.in (kom-unread-mode-line-type): New global variable.

2004-11-12  Pontus Freyhult  <pont@soua.net>

        * commands2.el (kom-list-sessions): Use session-list-no-unread-in
	if there are no texts in the session.

	* english-strings.el, swedish-strings.el (local):
	Added session-list-no-unread-in.
	
	* commands2.el (kom-modeline-select-unread-kom): Use 
	lyskom-session-nickname.
	(kom-status-server): Dito.

	* lyskom-rest.el (lyskom-session-nickname): Take additional argument
	if the nick name is to be put in the mode line.
	(lyskom-mode-name-from-host): Pass mode-line arg.
	
	* async.el (lyskom-show-logged-in-person): Use lyskom-session-nickname.
	(lyskom-show-logged-out-person): Dito.
	
	* utilities.el (lyskom-get-server-alias): Deleted (almost) unused
	function.
	(lyskom-nag-about-presentation): Use lyskom-session-nickname instead.

	* vars.el.in (lyskom-commands): Added kom-list-sessions.

	* menus.el (lyskom-menu-template): Added kom-list-sessions.

	* commands2.el (kom-list-sessions): Sort first on priority, 
	then on session name. Corrected bad usage of sort.
	Handle nil entries in lyskom-list-news result.
	