@@ -1,3 +1,7 @@
+2004-11-16  Pontus Freyhult  <pont@soua.net>
+
+	* lyskom-rest.el (lyskom-update-prompt): Use lyskom-session-nickname.
+
 2004-11-15  Pontus Freyhult  <pont@soua.net>
 
 	Implement alternate unread mode line:
